--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>YAAS</title>
+    <title>
+        {% block title %}YAAS{% endblock %}
+    </title>
 </head>
 <body>
-{% block content %}
-{% endblock %}
+<div id="sidebar">
+    {% block sidebar %}
+        <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/auctions">Auctions</a></li>
+    {% endblock %}
+    </ul>
+</div>
+
+<div id="content">
+    {% block content %}
+    {% endblock %}
+</div>
 </body>
 </html>
