--- a/templates/base.html
+++ b/templates/base.html
@@ -4,20 +4,66 @@
     <title>
         {% block title %}YAAS{% endblock %}
     </title>
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .nav {
+        overflow: hidden;
+        background-color: #333;
+    }
+    .nav ul{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    .nav li{
+        float: left;
+    }
+    .nav li.user{
+        float: right;
+        background-color: #4CAF50;
+        color: white;
+
+    }
+    .nav a{
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+    .nav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+    {#.nav a.active {#}
+    {#    background-color: #4CAF50;#}
+    {#    color: white;#}
+    {##}
+</style>
 </head>
 <body>
-<div id="sidebar">
-    {% block sidebar %}
+
+<div id="nav" class="nav">
+    {% block nav %}
         <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="{% url 'auctions:index' %}">Auctions</a></li>
-        <li><a href="{% url 'core:register' %}">Register</a></li>
-        <li><a href="{% url 'core:login' %}">Login</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="{% url 'auctions:index' %}">Auctions</a></li>
+            <li><a href="{% url 'core:register' %}">Register</a></li>
+            {% if user.is_authenticated %}
+                <li style="float: right"><a href="{% url 'core:logout' %}">Logout</a></li>
+                <li class="user"><a href="core/{{ user.id }}">{{ user }}</a></li>
+            {% else %}
+                <li style="float: right"><a href="{% url 'core:login' %}">Login</a></li>
+            {% endif %}
+        </ul>
     {% endblock %}
-    </ul>
 </div>
 
-<div id="content">
+<div id="content", style="padding-left: 16px">
     {% block content %}
     {% endblock %}
 </div>
