--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -7,6 +7,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        {% block errorMessage %}{% endblock %}
         <button type="submit">Login</button>
     </form>
 {% endblock %}
