--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -6,6 +6,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        {% block errorMessage %}{% endblock %}
         <button type="submit">Sign up</button>
     </form>
 {% endblock %}
