--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,7 @@
         background-color: #ddd;
         color: black;
     }
-    {#.nav a.active {#}
-    {#    background-color: #4CAF50;#}
-    {#    color: white;#}
-    {##}
+
 </style>
 </head>
 <body>
@@ -52,7 +49,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="{% url 'auctions:index' %}">Auctions</a></li>
-            <li><a href="{% url 'core:register' %}">Register</a></li>
+            <li><a href="{% url 'core:register' %}">New User</a></li>
             {% if user.is_authenticated %}
                 <li style="float: right"><a href="{% url 'core:logout' %}">Logout</a></li>
                 <li class="user"><a href="core/{{ user.id }}">{{ user }}</a></li>
@@ -65,6 +62,7 @@
 
 <div id="content", style="padding-left: 16px">
     {% block content %}
+        <h2>Yet Another Auction Site</h2>
     {% endblock %}
 </div>
 </body>
