--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -7,6 +7,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p}}
+        {% block errorMessage %}{% endblock %}
         <input type="submit" value="Submit">
     </form>
 {% endblock %}
