--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -8,10 +8,10 @@
         <ul>
             {% for auction in auctionList %}
                 <li>
-                    {#        <a href="{% url 'auctions:detail' auction.id %}">#}
-                    {#            {{ auction.title }}#}
-                    {#        </a>#}
-                    <p>{{ auction.title }}</p>
+                    <a href="{% url 'auctions:detail' auction.id %}">
+                        {{ auction.title }}
+                    </a>
+{#                    <p>{{ auction.title }}</p>#}
                 </li>
             {% endfor %}
         </ul>
