--- a/auctions/templates/auctions/create_error.html
+++ b/auctions/templates/auctions/create_error.html
@@ -1,5 +1,5 @@
 {% extends 'auctions/create.html' %}
 
-{% block errorMessage %}
+{% block error_message %}
     <p><i>{{ error }}</i></p>
 {% endblock %}
