--- a/auctions/templates/auctions/detail.html
+++ b/auctions/templates/auctions/detail.html
@@ -8,11 +8,11 @@
 
     {% block description %}
         <p>{{ auction.description }}</p>
-        {% if isPermittedToEdit %}
+        {% if is_permitted_to_edit %}
         <a href="{% url 'auctions:edit' auction.id %}">Edit description</a>
         {% endif %}
     {% endblock %}
 
     <p>{{ auction.deadline }}</p>
-    <p>{{ auction.minPrice }}€</p>
+    <p>{{ auction.min_price }}€</p>
 {% endblock %}
