--- a/auctions/templates/auctions/detail.html
+++ b/auctions/templates/auctions/detail.html
@@ -3,18 +3,26 @@
 {% block title %}Auction Details{% endblock %}
 
 {% block content %}
+
     <p>{{ auction.title }}</p>
     <p>{{ auction.author }}</p>
 
     {% block description %}
+
         <p>{{ auction.description }}</p>
         {% if is_permitted_to_edit %}
         <a href="{% url 'auctions:edit' auction.id %}">Edit description</a>
         {% endif %}
+
     {% endblock %}
 
     <p>{{ auction.deadline }}</p>
     <p>{{ auction.min_price }}€</p>
 
-    <a href="{% url 'bids:bid' auction.id%}">New Bid</a>
+    {% block bid %}
+
+        <a href="{% url 'bids:bid' auction.id%}">New Bid</a>
+
+    {% endblock %}
+
 {% endblock %}
