--- a/auctions/templates/auctions/detail.html
+++ b/auctions/templates/auctions/detail.html
@@ -18,11 +18,21 @@
 
     <p>{{ auction.deadline }}</p>
     <p>{{ auction.min_price }}€</p>
+    <p><i>{{ auction.state }}</i></p>
 
     {% block bid %}
 
         <a href="{% url 'bids:bid' auction.id%}">New Bid</a>
 
     {% endblock %}
+
+    {% if admin %}
+        <form action="{% url 'auctions:ban_auction' auction.id %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="ban" value="{{ auction.id }}">
+            <p><input type="submit" value="Ban Auction"></p>
+        </form>
+{#        <p><a href="{% url 'auctions:ban_auction' auction.id %}">Ban Auction</a></p>#}
+    {% endif %}
 
 {% endblock %}
