--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -62,7 +64,31 @@
 
 <div id="content" style="padding-left: 16px">
     {% block content %}
-        <h2>Yet Another Auction Site</h2>
+        <h2>{% trans 'Yet Another Auction Site' %}</h2>
+
+        <form action="{% url 'core:home' %}" method="post">
+            {% csrf_token %}
+            <input name="next" type="hidden" value="{{ redirect_to }}">
+            <label>
+                <select name="language">
+                    {% get_current_language as LANGUAGE_CODE %}
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+
+                    {% for language in languages %}
+                        <option value="{{ language.code }}"
+                                {% if language.code == LANGUAGE_CODE %}
+                                    selected
+                                {% endif %}>
+                            {{ language.name_local }} ({{ language.code }})
+                        </option>
+                    {% endfor %}
+
+                </select>
+            </label>
+            <input type="submit" value="Go">
+        </form>
+
     {% endblock %}
 </div>
 </body>
