--- a/auctions/templates/auctions/detail.html
+++ b/auctions/templates/auctions/detail.html
@@ -17,7 +17,7 @@
     {% endblock %}
 
     <p>{{ auction.deadline }}</p>
-    <p>{{ auction.min_price }}€</p>
+    <p>{{ converted_price }}</p>
     <p><i>{{ auction.state }}</i></p>
 
     {% block bid %}
