--- a/bids/templates/bids/new_bid.html
+++ b/bids/templates/bids/new_bid.html
@@ -3,7 +3,7 @@
 {% block bid %}
     <form method="post">
         {% csrf_token %}
-        {{form}}
+        {{form.as_p}}
         <input type="submit" value="Submit">
     </form>
 {% endblock %}
