--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -23,6 +23,6 @@
             {% endfor %}
         </ul>
     {% else %}
-        <p>No auctions are available.</p>
+        <p>No auctions were found.</p>
     {% endif %}
 {% endblock %}
